test/fails/bad_tags/decl4.lgl
tag b is a;
tag a is vec<2>;  // Out of order